feat: add Render deployment config and fix CORS/API URL for production
- Add backend/Dockerfile (multi-stage: Maven builder + JRE 21 Alpine runtime)
- Add render.yaml (Docker web service config with env vars)
- Fix SecurityConfig: CORS now reads ALLOWED_ORIGINS env var (was hardcoded to localhost:5173)
- Fix api.js: baseURL now reads VITE_API_URL env var (was hardcoded to localhost:8080)
- Update application.properties: all secrets/config read from env vars with safe defaults
- Add backend/.env.example and frontend/.env.example for deployment reference